--- a/static/index.html
+++ b/static/index.html
@@ -8,9 +8,15 @@
 		<title>Testing website</title>
 	</head>
 	<body>
-		<div class="container container-dark">
-			<canvas id="triggerCanvas"></canvas>
+		<div class="container container-rainbow">
+			<canvas id="enemyCollisionCanvas"></canvas>
+			<canvas id="enemyRavenCanvas"></canvas>
 		</div>
+
+		<div class="container container-dark">
+			<canvas id="explosionCanvas"></canvas>
+		</div>
+
 		<div class="container">
 			<canvas id="enemyCanvas"></canvas>
 			<div class="control">
