--- a/static/index.html
+++ b/static/index.html
@@ -8,9 +8,13 @@
 		<title>Testing website</title>
 	</head>
 	<body>
+		<div class="container">
+			<canvas id="gameCanvas"></canvas>
+		</div>
+
 		<div class="container container-rainbow">
-			<canvas id="enemyCollisionCanvas"></canvas>
-			<canvas id="enemyRavenCanvas"></canvas>
+			<canvas id="ravenCollisionCanvas"></canvas>
+			<canvas id="ravenCanvas"></canvas>
 		</div>
 
 		<div class="container container-dark">
