--- a/static/index.html
+++ b/static/index.html
@@ -8,6 +8,10 @@
 		<title>Testing website</title>
 	</head>
 	<body>
+		<div class="container container-dark">
+			<canvas id="moveCanvas"></canvas>
+		</div>
+
 		<div class="container">
 			<canvas id="gameCanvas"></canvas>
 		</div>
