--- a/static/index.html
+++ b/static/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<div class="container container-dark">
-			<canvas id="moveCanvas"></canvas>
+			<canvas id="controlCanvas"></canvas>
 		</div>
 
 		<div class="container">
