--- a/static/index.html
+++ b/static/index.html
@@ -58,7 +58,7 @@
 
 		<div class="container">
 			<canvas id="playerCanvas"></canvas>
-			<div class="control">
+			<!-- <div class="control">
 				<div>
 					<label for="playerAnimation">Choose animation :</label>
 					<select name="playerAnimation" id="playerAnimation">
@@ -74,7 +74,7 @@
 						<option value="gethit">Get hit</option>
 					</select>
 				</div>
-			</div>
+			</div> -->
 		</div>
 
 		<script type="module" src="./src/main.js"></script>
