--- a/static/index.html
+++ b/static/index.html
@@ -8,7 +8,7 @@
 		<title>Testing website</title>
 	</head>
 	<body>
-		<div class="container container-dark">
+		<!-- <div class="container container-dark">
 			<canvas id="controlCanvas"></canvas>
 		</div>
 
@@ -54,7 +54,7 @@
 					<span id="bgSpeedValue">[5]</span>
 				</div>
 			</div>
-		</div>
+		</div> -->
 
 		<div class="container">
 			<canvas id="playerCanvas"></canvas>
