--- a/static/index.html
+++ b/static/index.html
@@ -8,10 +8,11 @@
 		<title>Testing website</title>
 	</head>
 	<body>
-		<!-- <div class="container container-dark">
+		<div class="container container-dark">
 			<canvas id="controlCanvas"></canvas>
 		</div>
 
+		<!--
 		<div class="container">
 			<canvas id="gameCanvas"></canvas>
 		</div>
@@ -56,26 +57,9 @@
 			</div>
 		</div> -->
 
-		<div class="container">
+		<!-- <div class="container">
 			<canvas id="playerCanvas"></canvas>
-			<!-- <div class="control">
-				<div>
-					<label for="playerAnimation">Choose animation :</label>
-					<select name="playerAnimation" id="playerAnimation">
-						<option value="idle">Idle</option>
-						<option value="jump">Jump</option>
-						<option value="fall">Fall</option>
-						<option value="run" selected="selected">Run</option>
-						<option value="dizzy">Dizzy</option>
-						<option value="sit">Sit</option>
-						<option value="roll">Roll</option>
-						<option value="bite">Bite</option>
-						<option value="ko">KO</option>
-						<option value="gethit">Get hit</option>
-					</select>
-				</div>
-			</div> -->
-		</div>
+		</div> -->
 
 		<script type="module" src="./src/main.js"></script>
 	</body>
