--- a/static/index.html
+++ b/static/index.html
@@ -34,7 +34,7 @@
 	</head>
 	<body>
 		<div class="container container-dark">
-			<canvas id="controlCanvas"></canvas>
+			<canvas id="gameCanvas"></canvas>
 		</div>
 
 		<!--
