--- a/static/index.html
+++ b/static/index.html
@@ -35,6 +35,10 @@
 	<body>
 		<div class="container container-dark">
 			<canvas id="gameCanvas"></canvas>
+			<!-- <canvas id="particleCanvas"></canvas>
+			<canvas id="enemyCanvas"></canvas>
+			<canvas id="playerCanvas"></canvas>
+			<canvas id="statusCanvas"></canvas> -->
 		</div>
 
 		<!--
