--- a/static/index.html
+++ b/static/index.html
@@ -35,6 +35,8 @@
 	<body>
 		<div class="container container-dark">
 			<canvas id="gameCanvas"></canvas>
+			<canvas id="staticCanvas"></canvas>
+			<canvas id="valueCanvas"></canvas>
 			<!-- <canvas id="particleCanvas"></canvas>
 			<canvas id="enemyCanvas"></canvas>
 			<canvas id="playerCanvas"></canvas>
