--- a/static/index.html
+++ b/static/index.html
@@ -1,35 +1,13 @@
 <!DOCTYPE html>
-<html
-	lang="en"
-	data-bs-theme="dark"
->
+<html lang="en" data-bs-theme="dark">
 	<head>
 		<meta charset="utf-8" />
-		<meta
-			name="viewport"
-			content="width=device-width, initial-scale=1"
-		/>
-		<meta
-			name="description"
-			content="Testing website"
-		/>
-		<link
-			rel="preconnect"
-			href="https://fonts.googleapis.com"
-		/>
-		<link
-			rel="preconnect"
-			href="https://fonts.gstatic.com"
-			crossorigin
-		/>
-		<link
-			href="https://fonts.googleapis.com/css2?family=Creepster&display=swap"
-			rel="stylesheet"
-		/>
-		<link
-			rel="stylesheet"
-			href="index.css"
-		/>
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="description" content="Testing website" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet" />
+		<link rel="stylesheet" href="index.css" />
 		<title>Testing website</title>
 	</head>
 	<body>
@@ -37,6 +15,8 @@
 			<canvas id="gameCanvas"></canvas>
 			<canvas id="staticCanvas"></canvas>
 			<canvas id="valueCanvas"></canvas>
+			<canvas id="controlCanvas"></canvas>
+			<canvas id="controlMarkerCanvas"></canvas>
 			<!-- <canvas id="particleCanvas"></canvas>
 			<canvas id="enemyCanvas"></canvas>
 			<canvas id="playerCanvas"></canvas>
@@ -92,9 +72,6 @@
 			<canvas id="playerCanvas"></canvas>
 		</div> -->
 
-		<script
-			type="module"
-			src="./src/main.js"
-		></script>
+		<script type="module" src="./src/main.js"></script>
 	</body>
 </html>
