--- a/index.html
+++ b/index.html
@@ -13,14 +13,11 @@
 	<body>
 		<div class="container container-dark">
 			<canvas id="gameCanvas"></canvas>
-			<canvas id="staticCanvas"></canvas>
+			<canvas id="guiCanvas"></canvas>
 			<canvas id="valueCanvas"></canvas>
+			<canvas id="pointerCanvas"></canvas>
 			<canvas id="controlCanvas"></canvas>
-			<canvas id="controlMarkerCanvas"></canvas>
-			<!-- <canvas id="particleCanvas"></canvas>
-			<canvas id="enemyCanvas"></canvas>
-			<canvas id="playerCanvas"></canvas>
-			<canvas id="statusCanvas"></canvas> -->
+			<canvas id="markerCanvas"></canvas>
 		</div>
 
 		<!--
