--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<title>Testing website</title>
 	</head>
 	<body>
-		<div class="container container-dark">
+		<div id="gameContainer" class="container container-dark">
 			<canvas id="gameCanvas"></canvas>
 			<canvas id="guiCanvas"></canvas>
 			<canvas id="valueCanvas"></canvas>
