--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	</head>
 	<body>
 		<div id="gameContainer" class="container container-dark">
+			<div class="loading">Please wait. Downloading resources...</div>
 			<canvas id="gameCanvas"></canvas>
 			<canvas id="guiCanvas"></canvas>
 			<canvas id="valueCanvas"></canvas>
