--- a/static/index.html
+++ b/static/index.html
@@ -156,6 +156,11 @@
 
 		<img
 			class="hide"
+			src="res/ctl/icon.png"
+			id="ctl_icon_png"
+		/>
+		<img
+			class="hide"
 			src="res/ctl/icon.svg"
 			id="ctl_icon_svg"
 		/>
@@ -181,6 +186,16 @@
 			src="res/ctl/life_icon_inactive.svg"
 			id="ctl_life_icon_inactive_svg"
 		/>
+		<img
+			class="hide"
+			src="res/ctl/life_icon.png"
+			id="ctl_life_icon_png"
+		/>
+		<img
+			class="hide"
+			src="res/ctl/life_icon_inactive.png"
+			id="ctl_life_icon_inactive_png"
+		/>
 
 		<img
 			class="hide"
@@ -203,6 +218,16 @@
 			class="hide"
 			src="res/ctl/power_icon_inactive.svg"
 			id="ctl_power_icon_inactive_svg"
+		/>
+		<img
+			class="hide"
+			src="res/ctl/power_icon.png"
+			id="ctl_power_icon_png"
+		/>
+		<img
+			class="hide"
+			src="res/ctl/power_icon_inactive.png"
+			id="ctl_power_icon_inactive_png"
 		/>
 
 		<img
@@ -234,6 +259,16 @@
 		/>
 		<img
 			class="hide"
+			src="res/ctl/shield_icon_inactive.png"
+			id="ctl_shield_icon_inactive_png"
+		/>
+		<img
+			class="hide"
+			src="res/ctl/shield_icon.png"
+			id="ctl_shield_icon_png"
+		/>
+		<img
+			class="hide"
 			src="res/ctl/start.svg"
 			id="ctl_start_svg"
 		/>
@@ -246,6 +281,16 @@
 			class="hide"
 			src="res/ctl/stopwatch_icon_inactive.svg"
 			id="ctl_stopwatch_icon_inactive_svg"
+		/>
+		<img
+			class="hide"
+			src="res/ctl/stopwatch_icon.png"
+			id="ctl_stopwatch_icon_png"
+		/>
+		<img
+			class="hide"
+			src="res/ctl/stopwatch_icon_inactive.png"
+			id="ctl_stopwatch_icon_inactive_png"
 		/>
 		<img
 			class="hide"
