--- a/static/index.html
+++ b/static/index.html
@@ -71,7 +71,7 @@
 			src="res/boom.wav"
 			id="boom_wav"
 		/>
-		<img
+		<!-- <img
 			class="hide"
 			src="res/boom.png"
 			id="boom_png"
@@ -351,7 +351,7 @@
 			class="hide"
 			src="res/enemy/enemy11.png"
 			id="enemy_enemy11_png"
-		/>
+		/> -->
 
 		<script
 			type="module"
