--- a/index.html
+++ b/index.html
@@ -11,43 +11,14 @@
 		/>
 		<meta
 			name="description"
-			content="Testing website"
+			content="HTML Canvas game build using Typescript"
 		/>
-		<link
-			href="/res/font/Creepster.eot"
-			as="font"
-			type="font/eot"
-			crossorigin
-		/>
-		<link
-			href="/res/font/Creepster.woff2"
-			as="font"
-			type="font/woff2"
-			crossorigin
-		/>
-		<link
-			href="/res/font/Creepster.woff"
-			as="font"
-			type="font/woff"
-			crossorigin
-		/>
-		<link
-			href="/res/font/Creepster.ttf"
-			as="font"
-			type="font/ttf"
-			crossorigin
-		/>
-		<link
-			href="/res/font/Creepster.svg"
-			as="font"
-			type="font/svg"
-			crossorigin
-		/>
+		
 		<link
 			rel="stylesheet"
 			href="index.css"
 		/>
-		<title>Testing website</title>
+		<title>TS-Game</title>
 	</head>
 	<body>
 		<div
