--- a/static/index.html
+++ b/static/index.html
@@ -27,7 +27,7 @@
 		>
 			<div class="loading">
 				<h1>Please wait</h1>
-				<h3>Downloading asset file</h3>
+				<h3 id="loading_text">Downloading asset file</h3>
 				<h3 id="loading_counter">0% Complete</h3>
 
 			</div>
