--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 			class="container container-dark"
 		>
 			<div class="loading">
+				<div>
+					<div class="lds-ring"><div></div><div></div><div></div><div></div></div>
+				</div>
 				<h1>Please wait</h1>
 				<h3 id="loading_text">Downloading asset file</h3>
 				<h3 id="loading_counter">0% Complete</h3>
