--- a/static/index.html
+++ b/static/index.html
@@ -40,6 +40,7 @@
 			<canvas id="pointerCanvas"></canvas>
 			<canvas id="controlCanvas"></canvas>
 			<canvas id="markerCanvas"></canvas>
+			<canvas id="aiCanvas"></canvas>
 		</div>
 
 
