--- a/index.html
+++ b/index.html
@@ -37,9 +37,11 @@
 			<canvas id="gameCanvas"></canvas>
 			<canvas id="guiCanvas"></canvas>
 			<canvas id="valueCanvas"></canvas>
+			<canvas id="aiCanvas"></canvas>
 			<canvas id="pointerCanvas"></canvas>
 			<canvas id="controlCanvas"></canvas>
 			<canvas id="markerCanvas"></canvas>
+			
 		</div>
 
 
